--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
-	"update_url":"http://clients2.google.com/service/update2/crx",
+	"manifest_version":2,
 	"name":"Deezer Mediakeys Reloaded",
-	"version":"0.1",
+	"version":"0.2",
 	"description":"Enable mediakeys when on Deezer but also from other tabs.",
 	"permissions":["tabs","http://*/*","https://*/*"],
-	"background_page":"background.html",
+	"background":{
+		"scripts":[
+			"js/jquery-1.7.2.min.js",
+			"js/const.js",
+			"background.js"
+		]
+	},
 	"options_page":"options.html",
 	"icons":{
 		"16":"img/icon_16.png",
@@ -14,7 +20,7 @@
 		{
 		  "matches": ["http://*/*","https://*/*"],
 		  "permissions":["tabs","http://*/*","https://*/*"],
-		  "js": ["js/jquery-1.5.1.min.js","js/dzmkv2.js"],
+		  "js": ["js/jquery-1.7.2.min.js","js/dzmkv2.js"],
 		  "run_at": "document_idle"
 		}
 	]
