--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,11 @@
             "suggested_key": { "default": "MediaNextTrack" },
             "description": "Next Key",
             "global": true
+        },
+        "STOP-MK": {
+            "suggested_key": { "default": "MediaStop" },
+            "description": "Stop Key",
+            "global": true
         }
     },
     "icons": {
