--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     ],
     "background": {
         "scripts": [
-            "background.js"
+            "js/background.js"
         ],
         "persistent": false
     },
